--- a/app/src/main/res/layout/activity_einfaches_rechnen.xml
+++ b/app/src/main/res/layout/activity_einfaches_rechnen.xml
@@ -4,18 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="16dp"
+    android:layout_margin="0dp"
     tools:context=".EinfachesRechnen">
 
     <LinearLayout
         android:id="@+id/linearLayout"
-        android:layout_width="368dp"
+        android:layout_width="342dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -28,7 +26,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="180dp"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="@string/geloesteAufgaben"
                 android:textSize="24sp"
@@ -39,7 +37,7 @@
                 android:id="@+id/geloesteAufgaben"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:text="TextView"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -53,7 +51,7 @@
 
             <TextView
                 android:id="@+id/textView2"
-                android:layout_width="180dp"
+                android:layout_width="220dp"
                 android:layout_height="wrap_content"
                 android:text="@string/versuche"
                 android:textSize="24sp" />
@@ -62,7 +60,7 @@
                 android:id="@+id/versucheView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="right"
+                android:layout_gravity="end"
                 android:text="TextView"
                 android:textSize="24sp" />
         </LinearLayout>
@@ -87,37 +85,48 @@
                 android:id="@+id/aktuelleAufgabe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
                 android:text="TextView"
-                android:textSize="24sp" />
+                android:textSize="30sp" />
         </LinearLayout>
 
         <Button
             android:id="@+id/loesung1"
             android:layout_width="match_parent"
             android:layout_height="64dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
             android:onClick="loesungButtonClick"
-            android:paddingTop="24dp"
             android:textSize="24sp" />
 
         <Button
             android:id="@+id/loesung2"
             android:layout_width="match_parent"
             android:layout_height="64dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
             android:onClick="loesungButtonClick"
             android:textSize="24sp" />
 
         <Button
             android:id="@+id/loesung3"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
             android:onClick="loesungButtonClick"
             android:textSize="24sp" />
 
         <Button
             android:id="@+id/loesung4"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="64dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="24dp"
+            android:layout_marginTop="8dp"
             android:onClick="loesungButtonClick"
             android:textSize="24sp" />
 
