--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,5 +47,25 @@
             android:tag="sub"
             android:text="@string/subtrahieren" />
 
+
+        <Button
+            android:id="@+id/buttonAddErg"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="16dp"
+            android:onClick="buttonClick"
+            android:tag="adderg"
+            android:text="@string/adderg" />
+
+        <Button
+            android:id="@+id/buttonSubErg"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|center_horizontal"
+            android:layout_marginTop="16dp"
+            android:onClick="buttonClick"
+            android:tag="adderg"
+            android:text="@string/suberg" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
