--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,5 +67,27 @@
             android:onClick="buttonClick"
             android:tag="adderg"
             android:text="@string/suberg" />
+
+        <TextView
+            android:id="@+id/textView5"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16sp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center"
+            android:text="@string/biswieviel" />
+
+        <EditText
+            android:id="@+id/bisMaxEingabe"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:ems="10"
+            android:gravity="center"
+            android:inputType="number"
+            android:text="20" />
+
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
