--- a/app/src/main/res/layout/activity_einfaches_rechnen_mit_eingabe.xml
+++ b/app/src/main/res/layout/activity_einfaches_rechnen_mit_eingabe.xml
@@ -115,6 +115,7 @@
         <Button
             android:id="@+id/loesung4"
             android:layout_width="match_parent"
+            style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_height="64dp"
             android:layout_marginLeft="24dp"
             android:layout_marginRight="24dp"
@@ -125,16 +126,4 @@
 
     </LinearLayout>
 
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:onClick="hauptMenue"
-        android:text="@string/hauptMenue"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
