--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_margin="0dp"
+    android:padding="0dp"
     tools:context=".MainActivity">
 
     <LinearLayout
@@ -29,6 +31,7 @@
 
         <Button
             android:id="@+id/buttonAdd"
+            style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
@@ -40,6 +43,7 @@
         <Button
             android:id="@+id/buttonSub"
             android:layout_width="200dp"
+            style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
@@ -51,6 +55,7 @@
         <Button
             android:id="@+id/buttonAddErg"
             android:layout_width="200dp"
+            style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
@@ -61,6 +66,7 @@
         <Button
             android:id="@+id/buttonSubErg"
             android:layout_width="200dp"
+            style="@android:style/Widget.Material.Light.Button.Inset"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
