--- a/app/src/main/res/layout/activity_einfaches_rechnen_mit_eingabe.xml
+++ b/app/src/main/res/layout/activity_einfaches_rechnen_mit_eingabe.xml
@@ -112,6 +112,14 @@
             android:inputType="number"
             android:textSize="24sp" />
 
+        <TextView
+            android:id="@+id/hinweis"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="1"
+            android:gravity="center" />
+
         <Button
             android:id="@+id/loesung4"
             android:layout_width="match_parent"
