--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/constraintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_margin="0dp"
@@ -42,8 +43,8 @@
 
         <Button
             android:id="@+id/buttonSub"
-            android:layout_width="200dp"
             style="@android:style/Widget.Material.Light.Button.Inset"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
@@ -54,8 +55,8 @@
 
         <Button
             android:id="@+id/buttonAddErg"
-            android:layout_width="200dp"
             style="@android:style/Widget.Material.Light.Button.Inset"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
@@ -65,8 +66,8 @@
 
         <Button
             android:id="@+id/buttonSubErg"
-            android:layout_width="200dp"
             style="@android:style/Widget.Material.Light.Button.Inset"
+            android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical|center_horizontal"
             android:layout_marginTop="16dp"
